* optimized print view * task no. 1651.82

--- a/core/view/toppanel.tmpl
+++ b/core/view/toppanel.tmpl
@@ -1,4 +1,4 @@
 <div id="toppanel">
-	<div id="companyLogo"><!-- company_logo --></div>
+	<div id="companyLogo"><img src="../../../config/img/logo.png" alt="" /></div>
 	{$head}
 </div>
