* optimized browser compatibility

--- a/core/asset/css/layout.css
+++ b/core/asset/css/layout.css
@@ -198,6 +198,9 @@ body {
 	margin:0;
 	padding:0;
 	cursor:pointer;
+	position: relative;
+	z-index: 10;
+	overflow:hidden;
 }
 
 .panelWidget h1.expand {
