--- a/core/asset/css/layout.css
+++ b/core/asset/css/layout.css
@@ -224,6 +224,8 @@ body {
 		margin:0;
 		padding:0 0 0 10px;
 		line-height:26px;
+		width:205px;
+		overflow: hidden;
 	}
 
 	.panelWidget.hasIcon span.title {
