--- a/core/asset/css/layout.css
+++ b/core/asset/css/layout.css
@@ -8,15 +8,13 @@ body {
 	text-align:center;
 	width:100%;
 	left:0;
-	background-color:#FFF;
 	border-bottom:2px solid #e3eace;
 }
 
 	#header .inner {
 		height:100px;
 		text-align:left;
-		width:978px;
-		margin:0 auto;
+		background-color:#fff;
 	}
 
 #box {
@@ -67,6 +65,9 @@ body {
 	top:46px;
 	float:left;
 	width:680px;
+	-moz-border-radius:0 10px 10px 10px;
+	-webkit-border-radius:0 10px 10px 10px;
+	border-radius:0 10px 10px 10px;
 }
 
 *+html #right .inner {
@@ -185,9 +186,7 @@ body {
 
 .panelWidget {
 	position:relative;
-	margin-bottom:8px;
 	padding-bottom:3px;
-	background:url(../../../core/asset/img/hr-hor.png) repeat-x scroll 0 bottom;
 }
 
 .panelWidget h1 {
