--- a/core/asset/css/navi.css
+++ b/core/asset/css/navi.css
@@ -13,9 +13,22 @@ ul#navi-main-list {
 
 ul#navi-main-list li {
 	float:left;
-	background-image:url('../img/rounded-box01.png');
-	background-position:100% 0;
 	margin-right:3px;
+}
+
+ul#navi-main-list li.level1 {
+	-moz-border-radius:10px 10px 0 0;
+	-webkit-border-radius:10px 10px 0 0;
+	border-radius:10px 10px 0 0;
+	-moz-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+	-webkit-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+	box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+}
+ul#navi-main-list li.level1:hover,
+ul#navi-main-list li.level1.active {
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+	box-shadow:none;
 }
 
 ul#navi-main-list li a {
@@ -25,14 +38,12 @@ ul#navi-main-list li a {
 	height:auto !important;
 	height:1px;
 	line-height:30px;
-	padding:0 14px 0 0;
+	padding:0 14px;
 	font-size:13px;
 	font-weight:bold;
 	text-transform:uppercase;
 	letter-spacing:1px;
 	white-space:nowrap;
-	background-image:url('../img/shadow.png');
-	background-position:50% 100%;
 }
 	#navi-main-list li.item a {
 		  color:#333;
@@ -41,14 +52,6 @@ ul#navi-main-list li a {
 	#navi-main-list li.item a:hover {
 		color:#000;
 	}
-
-ul#navi-main-list li a span.lt {
-	display:block;
-	float:left;
-	width:14px;
-	height:13px;
-	background-image:url('../img/rounded-box01.png');
-}
 
 ul#navi-main-list > li:hover a,
 ul#navi-main-list > li a.active {
