--- a/core/asset/css/panel.css
+++ b/core/asset/css/panel.css
@@ -8,24 +8,27 @@
 	clear:both;
 	width:270px;
 	padding:0;
-	margin:0 10px 50px 0;
+	margin:0 10px 0 0;
+	background-color: #fff;
+	-moz-border-radius:10px 10px 0 0;
+	-webkit-border-radius:10px 10px 0 0;
+	border-radius:10px 10px 0 0;
 }
 
-#panel div.panelHeader {
-	height:8px;
-	background:url(../img/panel-header.png) no-repeat 0 0;
-}
+
 
 #panel div.panelFooter {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
 	height:51px;
-	margin-top:-2px;
+	margin-top:-3px;
 	background:url(../img/panel-footer.png) no-repeat 0 0;
 }
 
 #panel div.panelWidget {
-	background:#fff;
-	margin:0 0 2px;
-	padding:5px 7px 6px;
+	padding:7px;
+	border-bottom:3px solid #e3eace;
 }
 
 #panel div.panelWidget .notification {
