--- a/core/asset/css/tab.css
+++ b/core/asset/css/tab.css
@@ -30,13 +30,15 @@
 }
 
 #content .tabs li {
-	display:table-cell;
 	float:left;
 	margin-right:3px;
-	background-image:url(../img/rounded-box02.png);
-	background-repeat:no-repeat;
-	background-position:100% 0;
 	cursor:pointer;
+	-moz-border-radius:10px 10px 0 0;
+	-webkit-border-radius:10px 10px 0 0;
+	border-radius:10px 10px 0 0;
+	-moz-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+	-webkit-box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
+	box-shadow:inset 0 -1px 1px rgba(0,0,0,.15);
 }
 
 #content .tabs li p {
@@ -46,27 +48,12 @@
 	height:auto !important;
 	height:1px;
 	line-height:26px;
-	padding:0 10px 0 0;
+	padding:0 10px;
 	font-size:10px;
 	font-weight:bold;
 	text-transform:uppercase;
 	letter-spacing:1px;
 	white-space:nowrap;
-	background-image:url(../img/shadow.png);
-	background-repeat:no-repeat;
-	background-position:50% 100%;
-}
-
-#content .tabs li p span.lt {
-	display:block;
-	position:relative;
-	float:left;
-	width:13px;
-	height:13px;
-	background-color:transparent;
-	background-image:url('../img/rounded-box02.png');
-	background-repeat:no-repeat;
-	background-position:0 0;
 }
 
 #content .tabs li p span.icon {
@@ -78,16 +65,10 @@
 	width:20px;
 	background-repeat:no-repeat;
 }
-
-#content .tabs li:hover p,
-#content .tabs li.active p {
-	background-image:none;
-}
-
+#content .tabs li:hover,
 #content .tabs li.active {
 	background-color:#fff; /* bclFF */
-}
-
-#content .tabs li:hover {
-	background-color:#fff; /* bclFF */
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+	box-shadow:none;
 }
