--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -30,7 +30,6 @@
 				<div class="panelWidget">
 					<h1 class="deniedOpen">
 						<span class="title">Todoyu 2.1</span>
-						<span class="rgt"></span>
 					</h1>
 					<img src="asset/img/banner.jpg">
 					<p class="slogan">
@@ -38,19 +37,15 @@
 					{Label install.installer.slogan.line2}
 					</p>
 				</div>
+				<div class="panelFooter"><!-- panel footer --></div>
 			</div>
 			{* ------------------- Panel end ------------- *}
 
 			<div id="contentBox">
-				<span class="lt"></span>
-				<span class="rt"></span>
-				<span class="lb"></span>
-				<span class="rb"></span>
 				<div class="content">
 					<div class="boxContent">
 						<h1>
 							<span class="title">Todoyu Installer - {Label $title}</span>
-							<span class="rgt"></span>
 						</h1>
 
 						{if $result.text || $text}
