* task no 1651.79 * new markup (table) for listings

--- a/core/asset/css/content.css
+++ b/core/asset/css/content.css
@@ -7,6 +7,9 @@ div.icon {
 	width:18px;
 	height:18px;
 }
+.icon.iconNotifySmall {
+	height:14px;
+}
 
 div.iconLarge,
 span.iconLarge {
@@ -155,11 +158,12 @@ div.infoBox div.content {
 	text-shadow:1px 1px #f3f3f3;
 }
 
-h1.headerLine.hasIcon {
-	padding-left:2px;
-}
-h1.headerLine.hasIcon span.title {
-	padding-left:27px;
+h1.headerLine span.title {
+	width:635px;
+	white-space: nowrap;
+    overflow: hidden;
+	text-overflow:ellipsis;
+	-o-text-overflow:ellipsis;
 }
 
 .headerLine span {
@@ -172,6 +176,14 @@ h1.headerLine.hasIcon span.title {
 	margin:0;
 	padding:0 0 0 20px;
 }
+
+h1.headerLine.hasIcon {
+	padding-left:2px;
+}
+h1.headerLine.hasIcon span.title {
+	padding-left:27px;
+}
+
 
 .headerLine th, .headerOptLine th {
 	font-size:10px;
@@ -187,6 +199,30 @@ h1.headerLine.hasIcon span.title {
 .headerLine button span {
 	line-height:20px;
 }
+
+/* table header */
+tr.headerLine {
+	border:none;
+	background:none;
+}
+tr.headerLine th {
+	background:url('../img/bg-headerline.png') repeat-x 0 0;
+	border-top:1px solid #dfdfdf;
+	border-bottom:1px solid #fff;
+}
+tr.headerLine th:first-child {
+	border-left:1px solid #dfdfdf;
+	-moz-border-radius:5px 0 0 0;
+	-webkit-border-radius:5px 0 0 0;
+	border-radius:5px 0 0 0;
+}
+tr.headerLine th:last-child {
+	border-right:1px solid #dfdfdf;
+	-moz-border-radius:0 5px 0 0;
+	-webkit-border-radius:0 5px 0 0;
+	border-radius:0 5px 0 0;
+}
+
 
 div.dialog {
 	text-align: left;
