--- a/core/asset/css/print.css
+++ b/core/asset/css/print.css
@@ -1,5 +1,6 @@
 #head,
 #panel,
+#content-tabs,
 #footer {
 	display:none;
 }
@@ -10,6 +11,15 @@
 
 #header {
 	border:none;
+	height:75px;
+}
+#header,
+#content-body {
+	position:static;
+}
+
+#box {
+	padding-top:0;
 }
 
 .buttons,
