* added to locale * corrected diction of proper nouns (comments)

--- a/core/view/scheduler-usage.tmpl
+++ b/core/view/scheduler-usage.tmpl
@@ -3,7 +3,7 @@ Usage of todoyu scheduler
 ====================================================
 
 Call by cronjob or manually with:
-	php path/to/scheduler.phpsh
+	PHP path/to/scheduler.phpsh
 
 Parameters:
 	No parameters:
