* Change loading order of config files * Cleanup config files

--- a/core/view/template/system.php.tmpl
+++ b/core/view/template/system.php.tmpl
@@ -24,6 +24,6 @@ Todoyu::$CONFIG['SYSTEM']['email']		= '{addslashes($email)}';
 Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
 Todoyu::$CONFIG['SYSTEM']['timezone']	= '{$timezone}';
 Todoyu::$CONFIG['SYSTEM']['todoyuURL']	= '{$todoyuURL}';
-Todoyu::$CONFIG['SYSTEM']['logLevel']	= {$logLevel|default:"0"};
+Todoyu::$CONFIG['SYSTEM']['logLevel']	= {$logLevel};
 
 Todoyu::$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
