* timerange.css image fix

--- a/core/asset/css/timerange.css
+++ b/core/asset/css/timerange.css
@@ -114,7 +114,7 @@
 	line-height:20px;
 	text-align:center;
 	white-space:nowrap;
-	background:url('../../../../../img/bg-button-css3.png') repeat-x 0 50% #fff;
+	background:url(../img/bg-button-css3.png) repeat-x 0 50% #fff;
 	border:1px solid #bbb;
 	border-radius:13px;
 }
