--- a/install/view/version-selector.tmpl
+++ b/install/view/version-selector.tmpl
@@ -40,6 +40,7 @@
 			<option selected="selected">2.1.0</option>
 			<option selected="selected">2.1.1</option>
 			<option selected="selected">2.1.2</option>
+			<option selected="selected">2.1.3</option>
 		</optgroup>
 	</select>
 	<input type="submit" value="Set last version and start normal update" />
