--- a/core/asset/css/content.scss
+++ b/core/asset/css/content.scss
@@ -34,22 +34,22 @@ span.iconLarge {
 	margin-bottom:5px;
 
 	div.icon,
-    div.text {
-    	float:left;
-    	clear:none; }
+	div.text {
+		float:left;
+		clear:none; }
 
-    .icon {
-    	background:url(../img/icons.png) 2px -628px no-repeat;
-    	margin-right:15px; }
+	.icon {
+		background:url(../img/icons.png) 2px -628px no-repeat;
+		margin-right:15px; }
 
-    .text {
-        font-weight:bold;
+	.text {
+		font-weight:bold;
 		padding-top:2px;
 		width:600px;
 
 		ul li {
-        	margin-bottom:7px; }
-    }
+			margin-bottom:7px; }
+	}
 }
 
 
@@ -67,11 +67,11 @@ ul.ulList li.listItem {
 	};
 
 	span {
-    	display:block;
-    	float:left; }
+		display:block;
+		float:left; }
 
-    &Header span {
-        font-weight:bold; }
+	&Header span {
+		font-weight:bold; }
 }
 
 ul.ulListDotted li.listItem {
@@ -99,7 +99,7 @@ li.listItem a.editableItem {
 	background-color:$grey01;
 
 	&.edit form {
-     	margin:-7px; }
+		margin:-7px; }
 }
 
 
@@ -107,12 +107,12 @@ div.infoBox {
 	margin-bottom:5px;
 
 	h4 {
-    	margin:0px;
-    	font-weight:bold; }
+		margin:0px;
+		font-weight:bold; }
 
-    div.content {
-    	padding:5px 12px;
-    	background:$white; }
+	div.content {
+		padding:5px 12px;
+		background:$white; }
 }
 
 .headerLine,
@@ -132,24 +132,24 @@ div.infoBox {
 	background:url('../img/bg-headerline.png') repeat-x 0 0;
 
 	label {
-    	text-transform:uppercase;
-    	font-size:10px;
-    	letter-spacing:0.3px; }
+		text-transform:uppercase;
+		font-size:10px;
+		letter-spacing:0.3px; }
 
-    th,
-    &OptLine th {
-    	font: {
+	th,
+	&OptLine th {
+		font: {
 			size:10px;
 			weight:normal; }
-    	text-transform:uppercase;
-    	white-space:nowrap;
-    }
+		text-transform:uppercase;
+		white-space:nowrap;
+	}
 
-    input {
-    	margin-right:10px; }
+	input {
+		margin-right:10px; }
 
-    button span {
-    	line-height:20px; }
+	button span {
+		line-height:20px; }
 }
 
 .headerOptLine {
@@ -160,21 +160,22 @@ div.infoBox {
 .button {
 	text-shadow:1px 1px $grey01; }
 
-h1.headerLine.hasIcon {
-	padding-left:2px;
+h1.headerLine {
+	.hasIcon {
+		padding-left:2px;
+	}
 
 	span{
 		float:left;
-        margin:0 0 0 5px;
-        line-height:25px;
+		margin:0 0 0 5px;
+		line-height:25px;
 
 		&.title {
-	    	padding-left:27px; }
+			padding-left:27px; }
 
-	    &.first {
-        	margin:0px;
-        	padding:0 0 0 15px;
-        }
+		&.first {
+			margin:0px;
+			padding:0 0 0 15px; }
 	}
 }
 
@@ -184,37 +185,37 @@ tr.headerLine {
 	background:none;
 
 	th {
-    	background:url('../img/bg-headerline.png') repeat-x 0 0;
-    	border: {
+		background:url('../img/bg-headerline.png') repeat-x 0 0;
+		border: {
 			top:1px solid $grey02;
 			bottom:1px solid $white;
-    	}
+		}
 
-        &:first-child {
-         	border: {
-         	    left:1px solid $grey02;
-         	    radius:5px 0 0 0;
-         	}
-         	-moz-border-radius:5px 0 0 0;
-         	-webkit-border-radius:5px 0 0 0;
-        }
+		&:first-child {
+			border: {
+				left:1px solid $grey02;
+				radius:5px 0 0 0;
+			}
+			-moz-border-radius:5px 0 0 0;
+			-webkit-border-radius:5px 0 0 0;
+		}
 
 		&:last-child {
-        	border: {
-        	    right:1px solid $grey02;
-        	    radius:0 5px 0 0;
-        	}
-        	-moz-border-radius:0 5px 0 0;
-        	-webkit-border-radius:0 5px 0 0;
-        }
-    }
+			border: {
+				right:1px solid $grey02;
+				radius:0 5px 0 0;
+			}
+			-moz-border-radius:0 5px 0 0;
+			-webkit-border-radius:0 5px 0 0;
+		}
+	}
 }
 
 div.dialog {
 	text-align:left;
 
 	&_content h1.headerLine {
-     	display:none; }
+		display:none; }
 }
 
 	/* h3 */
