* sass bugfixes, remapped all leftover hardcoded color definitions of core css into theme

--- a/core/asset/css/base.scss
+++ b/core/asset/css/base.scss
@@ -98,7 +98,7 @@ h4 {
 	height:12px;
 	padding:5px 0 7px 12px;
 	background-color:$white;
-	border-bottom:1px solid #eee;
+	border-bottom:1px solid $grey01;
 	font-weight:normal;
 	text-transform:uppercase;
 	white-space:nowrap; }
