--- a/core/asset/css/contextmenu.scss
+++ b/core/asset/css/contextmenu.scss
@@ -61,7 +61,7 @@
    ----------------------------------- */
 ul.context-menu li a.selected,
 ul.context-submenu li a.selected {
-	background:url(../../asset/img/icons.png) no-repeat 12px -870px #c9dbd4; }
+	background:url(../../asset/img/icons.png) no-repeat 12px -870px $colorPositive02; }
 
 .context-menu li a.disabled,
 .context-submenu li a.disabled {
