--- a/core/config/theme.scss
+++ b/core/config/theme.scss
@@ -30,6 +30,8 @@ $grey09:#222222;
 $colorHighlight01:#e9eda1;
 
 	// Positive marking, todoyu CI: green
+$colorPositive01:#b0d026;
+$colorPositive02:#c9dbd4;
 $colorPositive03:#c8d215;
 $colorPositive04:#c8ddbe;
 $colorPositive05:#9dc08e;
