--- a/core/asset/css/content.scss
+++ b/core/asset/css/content.scss
@@ -124,7 +124,7 @@ div.infoBox {
 	-moz-border-radius:5px 5px 0 0;
 	-webkit-border-radius:5px 5px 0 0;
 	border-radius:5px 5px 0 0;
-	border:1px solid #dfdfdf;
+	border:1px solid $grey02;
 	border-bottom-color:$white;
 }
 
