--- a/core/asset/css/form.scss
+++ b/core/asset/css/form.scss
@@ -6,7 +6,7 @@ form {
 	margin:0px;
 	padding:0px;
 
-	.fForm {
+	&.fForm {
 		padding:7px;
 		background-color:$grey01; }
 
@@ -304,7 +304,7 @@ div.fElement {
 	Design
    -----------------*/
 input, textarea, select {
-	border-color:$grey06 #e8e5de #e8e5de $grey06; }
+	border-color:$grey06 $grey01 $grey01 $grey06; }
 
 	fieldset.buttons div.fElement {
 		float:right; }
@@ -487,7 +487,7 @@ form .error.typeCheckbox {
    --------------------------------------- */
 div.errorMessage ul.invalidItems {
 	font-style:normal;
-	border-left:5px solid #F00;
+	border-left:5px solid $colorAlert00;
 	padding-left:5px;
 
 	li {
