--- a/core/asset/css/layout.scss
+++ b/core/asset/css/layout.scss
@@ -155,7 +155,7 @@ body {
 	left:0px;
 	width:100%;
 	height:5px;
-	background:#b0d026 url(../img/bg-footer.png) repeat-y 0 top; }
+	background:$colorPositive01 url(../img/bg-footer.png) repeat-y 0 top; }
 
 
 
