--- a/core/asset/css/button.scss
+++ b/core/asset/css/button.scss
@@ -73,26 +73,21 @@ button {
 
 	&.sendemail .icon {
 		background:url(../img/icons.png) no-repeat 6px -1156px;
-		width:20px;
-	}
+		width:20px; }
 
 	&.exclamation .icon {
 		background:url(../img/icons.png) no-repeat 4px -387px;
-		width:21px;
-	}
+		width:21px; }
 
 	&.generate .icon {
 		background:url(../img/icons.png) no-repeat 4px -1628px;
-		width:22px;
-	}
+		width:22px; }
 
 	&.exportCsv .icon {
 		background:url(../img/icons.png) 7px -1598px no-repeat;
-		width:28px;
-	}
+		width:28px; }
 
 	&.clear .icon	{
 		background:url(../img/icons.png) no-repeat 5px -357px;
-		width:21px;
-	}
+		width:21px; }
 }
