--- a/core/asset/css/layout.scss
+++ b/core/asset/css/layout.scss
@@ -128,11 +128,12 @@ body {
 	height:70px;
 	text-align:left;
 	margin-top:100px;
-	padding-top:20px; }
+	padding-top:20px;
 
-#footer .inner {
-	width:950px;
-	margin:0 auto; }
+	.inner {
+		width:950px;
+		margin:0 auto; }
+}
 
 #footer-info {
 	float:left;
