--- a/core/asset/css/panel.scss
+++ b/core/asset/css/panel.scss
@@ -2,9 +2,6 @@
 
 
 
-/* --------------
-	Panel
-   --------------*/
 #panel {
 	position:relative;
 	top:20px;
@@ -33,37 +30,25 @@
 		.notification {
 			text-align:left;
 			padding:5px 0 5px 7px; }
+
+		ul.naviList li {
+			line-height:18px;
+			padding:3px 0 3px 5px;
+			border-bottom:1px solid $grey02;
+
+			&.active {
+				background-color:$colorCorporate02; }
+
+			a {
+				width:100%;
+				display:inline-block;
+				padding-left:25px; }
+		}
+
+		h2 {
+			padding-left:2px; }
 	}
-}
 
-
-
-/* ---------------------
-	Panelwidget content
-   ---------------------*/
-#panel div.panelWidget ul.naviList li {
-	line-height:18px;
-	padding:3px 0 3px 5px;
-	border-bottom:1px solid $grey02;
-
-	&.active {
-		background-color:$colorCorporate02; }
-
-	a {
-		width:100%;
-		display:inline-block;
-		padding-left:25px; }
-}
-
-#panel div.panelWidget h2 {
-	padding-left:2px; }
-
-
-
-/* ---------------------
-	Form styling
-   ---------------------*/
-#panel {
 	select {
 		padding:0px; }
 
@@ -75,14 +60,11 @@
 		margin:0px;
 		padding:0px;
 		border:none;
-		background:none;
-	}
+		background:none; }
 
 	legend {
-		display:none;
-	}
+		display:none; }
 
 	.fField {
-		float:right;
-	}
+		float:right; }
 }
