* added auto-classname generation for db relation records (is_... columns containing TRUE are receiving that column name as classname)

--- a/core/view/form/FormElement_DatabaseRelation_Record.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation_Record.tmpl
@@ -1,4 +1,4 @@
-<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}" class="databaseRelation">
+<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}" class="databaseRelation {getRecordClassnames $record}">
 	<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-trigger" onclick="Todoyu.Form.toggleRecordForm({$idRecord}, '{$fieldname}', {$record._index})" class="formtrigger">
 		<span class="label {if $error}expanded{/if}" title="{Label core.form.records.edit}">{cropText htmlencode($record._label) 60}</span>
 		<span class="additionalStuff">
