--- a/core/view/select-grouped.tmpl
+++ b/core/view/select-grouped.tmpl
@@ -1,5 +1,5 @@
 <select {$extraAttributes} name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
-	{if !isset($multiple) && !isset($noPleaseSelect)}
+	{if !$multiple && !$noPleaseSelect}
 		<option value="0">{Label core.form.select.pleaseSelect}</option>
 		<option value="0" disabled="disabled">---------------------------</option>
 	{/if}
@@ -9,11 +9,13 @@
 		{/if}
 		{foreach $group option}
 			{$isSelected = false}
-			{if is_array($valueTemplate) && in_array($option.value, $valueTemplate) && !option.disabled}
+			{if in_array($option.value, $value) && !$option.disabled}
 				{$isSelected = true}
-				{$valueTemplate	= unsetArrayValue($valueTemplate,$option.value)}
+				{$value	= unsetArrayValue($value, $option.value)}
 			{/if}
-			<option value="{htmlencode $option.value}" {if $option.class}class="{$option.class}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
+			<option value="{htmlencode $option.value}" {if $option.class}class="{$option.class}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>
+				{$option.label}
+			</option>
 		{/foreach}
 		{if $label != "none"}
 			</optgroup>
