* extended installer to parse SCSS before rendering page

--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -4,11 +4,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>todoyu Installer - {Label $title}</title>
 
-	<link href="../core/asset/css/base.css" rel="stylesheet" type="text/css" />
-	<link href="../core/asset/css/layout.css" rel="stylesheet" type="text/css" />
-	<link href="../core/asset/css/panel.css" rel="stylesheet" type="text/css" />
-	<link href="../core/asset/css/form.css" rel="stylesheet" type="text/css" />
-	<link href="../core/asset/css/button.css" rel="stylesheet" type="text/css" />
+	<link href="../cache/css/core-asset-css-base.css" rel="stylesheet" type="text/css" />
+	<link href="../cache/css/core-asset-css-layout.css" rel="stylesheet" type="text/css" />
+	<link href="../cache/css/core-asset-css-panel.css" rel="stylesheet" type="text/css" />
+	<link href="../cache/css/core-asset-css-form.css" rel="stylesheet" type="text/css" />
+	<link href="../cache/css/core-asset-css-button.css" rel="stylesheet" type="text/css" />
 	<link href="asset/css/installer.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="../favicon.ico" />
 	<script language="javascript" type="text/javascript" src="../lib/js/prototype.js"></script>
