* Styling fixes: Red border, AC style

--- a/core/asset/css/formrecords.css
+++ b/core/asset/css/formrecords.css
@@ -18,7 +18,7 @@
 *****************************************************************************/
 
 .typeRecords input.search {
-	border-left: 5px solid red;
+	/*border-left: 5px solid red;*/
 }
 
 .typeRecords .results {
