--- a/core/view/form/FormElement_Records.tmpl
+++ b/core/view/form/FormElement_Records.tmpl
@@ -3,7 +3,7 @@
 {block name="field"}
 
 	{** Search field **}
-	<input type="text" id="{$htmlId}-search" value="" class="search {$inputClass} {$class}"  {$extraAttributes} />
+	<input type="text" id="{$htmlId}-search" value="" class="search textAC {$inputClass} {$class}"  {$extraAttributes} />
 
 	{** Result list **}
 	<ul id="{$htmlId}-results" class="results"></ul>
