--- a/core/asset/css/headlet.scss
+++ b/core/asset/css/headlet.scss
@@ -19,9 +19,15 @@
 		float:left;
 		z-index:200;
 
-		.active,
+		&.active,
 		&:hover {
-			z-index:202; }
+			z-index:202;
+
+			a {
+				border-color:$grey03;
+				z-index:203;
+				background-color:$white;}
+		}
 
 		a {
 			display:block;
@@ -33,12 +39,6 @@
 			border-width:0 1px;
 			cursor:pointer;
 			z-index:200;
-
-			&.active,
-			&:hover {
-				border-color:$grey03;
-				z-index:203;
-				background-color:$white; }
 		}
 
 		ul {
